--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Creative",
+  "name": "moto-lovers",
   "version": "4.2.0",
   "angular-cli": {},
   "scripts": {
@@ -35,6 +35,7 @@
     "@ngrx/store-log-monitor": "^3.0.2",
     "@ngx-translate/core": "^7.2.0",
     "@ngx-translate/http-loader": "^0.1.0",
+    "@types/csv-parse": "^1.1.9",
     "angular-calendar": "^0.13.5",
     "angular-sortablejs": "^2.0.4",
     "angularfire2": "^4.0.0-rc.1",
@@ -63,7 +64,7 @@
     "@types/d3": "^3.5.17",
     "@types/jasmine": "2.5.38",
     "@types/lodash": "^4.14.44",
-    "@types/node": "~6.0.60",
+    "@types/node": "^8.0.26",
     "@types/nvd3": "^1.8.33",
     "codelyzer": "~2.0.0-beta.1",
     "del-cli": "^1.1.0",
@@ -75,7 +76,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.0",
-    "ts-node": "~2.0.0",
+    "ts-node": "~3.3.0",
     "tslint": "~4.5.0",
     "typescript": "^2.4.2"
   }
