--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,8 @@
     "express": "4.15.3",
     "firebase-admin": "5.0.0",
     "firebase-functions": "0.5.7",
-    "google-cloud": "0.55.0"
+    "google-cloud": "0.55.0",
+    "nodemailer": "^2.4.1"
   },
   "private": true,
   "devDependencies": {
