--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "moment": "^2.17.1",
     "ngx-perfect-scrollbar": "^4.0.0",
     "ngx-quill": "^1.2.0",
+    "node-sass": "^4.5.3",
     "normalize.css": "^5.0.0",
     "nvd3": "^1.8.5",
     "quill": "^1.2.0",
